--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,7 +8,7 @@ body > * {
 
 .app {
   font-family: Lato;
-  background-color: #e5f3f5;
+  background-color: #EBF5FB;
   color: rgba(0,0,0,.87);
   display: flex;
   flex-direction: column;
