--- a/src/components/SimpleForm/components/Confirm/Confirm.css
+++ b/src/components/SimpleForm/components/Confirm/Confirm.css
@@ -1,6 +1,6 @@
 .container {
   display: inline-flex;
-  background-color: rgba(0,0,0,0.05);
+  background-color: rgba(0,0,0,0.06);
   box-shadow: inset 0 2px 0 rgba(0,0,0,.12);
   border-radius: 4px;
   padding: 6px;
@@ -11,7 +11,7 @@
   border: none;
   border-radius: 4px;
   outline: 0;
-  background-color: #BFC9CA;
+  background-color: #5DADE2;
   color: white;
   box-shadow: inset 0 -2px 0 rgba(0,0,0,.12);
   padding: 8px 12px;
@@ -19,7 +19,7 @@
 }
 
 .button:hover {
-  background-color: #AAB7B8;
+  background-color: #3498DB;
 }
 
 .button:active {
