--- a/src/components/SimpleForm/components/Confirm/Confirm.css
+++ b/src/components/SimpleForm/components/Confirm/Confirm.css
@@ -4,6 +4,7 @@
   box-shadow: inset 0 2px 0 rgba(0,0,0,.12);
   border-radius: 4px;
   padding: 6px;
+  margin-top: 12px;
 }
 
 .button {
@@ -23,7 +24,7 @@
 }
 
 .button:active {
-  box-shadow: inset 0 2px 0 rgba(0,0,0,.12);
+  box-shadow: inset 0 4px 0 rgba(0,0,0,.12);
 }
 
 .label {
