--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700,400italic);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 html,
 body,
@@ -7,11 +7,11 @@ body > * {
 }
 
 .app {
-  font-family: Lato;
-  background-color: #EBF5FB;
+  font-family: "Montserrat";
+  background-color: #F6F5F5;
   color: rgba(0,0,0,.87);
-  display: flex;
-  flex-direction: column;
+  max-width: 100%;
+  max-height: 100%;
   height: 100%;
   font-size: 24px;
 }
