--- a/src/components/SimpleForm/SimpleForm.css
+++ b/src/components/SimpleForm/SimpleForm.css
@@ -4,6 +4,13 @@
   padding: 0 32px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+}
+
+.small {
+  justify-content: flex-start;
+}
+
+.large {
+  justify-content: center;
 }
