--- a/src/components/SimpleForm/SimpleForm.css
+++ b/src/components/SimpleForm/SimpleForm.css
@@ -1,10 +1,30 @@
-.questions {
+.wrapper {
   height: 100%;
   margin: 0;
-  padding: 0 32px;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+
+.questions {
+  margin: 0 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  flex: auto;
+  z-index: 2;
+  box-shadow: 0 3px 3px rgba(0,0,0,.12);
+  border-bottom: 1px solid rgba(0,0,0,.26);
+}
+
+.progress {
+  height: 32px;
+  width: 100%;
+  background-color: rgba(0,0,0,.12);
+  z-index: 1;
 }
 
 .small {
