--- a/src/components/SimpleForm/components/Confirm/Confirm.css
+++ b/src/components/SimpleForm/components/Confirm/Confirm.css
@@ -16,7 +16,7 @@
   color: white;
   box-shadow: inset 0 -2px 0 rgba(0,0,0,.12);
   padding: 8px 12px;
-  transition: .2s ease-in-out;
+  transition: .5s cubic-bezier(0.35, 0, 0.25, 1);
 }
 
 .button:hover {
