--- a/src/components/SimpleForm/components/FinalStep/FinalStep.css
+++ b/src/components/SimpleForm/components/FinalStep/FinalStep.css
@@ -45,13 +45,16 @@
   color: white;
   box-shadow: inset 0 -4px 0 rgba(0,0,0,.12);
   padding: 16px;
-  transition: .2s ease-in-out;
+  transition: .5s cubic-bezier(0.35, 0, 0.25, 1);
   margin-top: 32px;
   width: 100%;
 }
 
-.button:active {
+.button:hover {
   background-color: #EE3534;
+}
+
+.button:active {
   box-shadow: inset 0 4px 0 rgba(0,0,0,.12);
 }
 
