--- a/src/components/SimpleForm/components/Progress/Progress.css
+++ b/src/components/SimpleForm/components/Progress/Progress.css
@@ -8,5 +8,5 @@
   height: 100%;
   background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,rgba(0, 0, 0, 0) 25%,rgba(0, 0, 0, 0) 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,rgba(0, 0, 0, 0) 75%,rgba(0, 0, 0, 0));
   background-size: 60px 60px;
-  transition: .2s ease-in-out;
+  transition: .5s cubic-bezier(0.35, 0, 0.25, 1);
 }
