--- a/src/components/SimpleForm/components/Confirm/Confirm.css
+++ b/src/components/SimpleForm/components/Confirm/Confirm.css
@@ -13,7 +13,7 @@
   border-radius: 4px;
   outline: 0;
   background-color: #F17D7D;
-  color: white;
+  color: #FFFFFF;
   box-shadow: inset 0 -2px 0 rgba(0,0,0,.12);
   padding: 8px 12px;
   transition: .5s cubic-bezier(0.35, 0, 0.25, 1);
