--- a/src/components/SimpleForm/components/FinalStep/FinalStep.css
+++ b/src/components/SimpleForm/components/FinalStep/FinalStep.css
@@ -3,7 +3,7 @@
   max-width: 600px;
   width: 100%;
   flex-direction: column;
-  background-color: white;
+  background-color: #FFFFFF;
   box-shadow: 0 2px 10px rgba(0,0,0,.26);
   border-radius: 5px;
 }
@@ -42,7 +42,7 @@
   border-radius: 4px;
   outline: 0;
   background-color: #F17D7D;
-  color: white;
+  color: #FFFFFF;
   box-shadow: inset 0 -4px 0 rgba(0,0,0,.12);
   padding: 16px;
   transition: .5s cubic-bezier(0.35, 0, 0.25, 1);
