--- a/src/components/SimpleForm/SimpleForm.css
+++ b/src/components/SimpleForm/SimpleForm.css
@@ -21,10 +21,11 @@
 }
 
 .progress {
-  height: 32px;
+  height: 0px;
   width: 100%;
   background-color: rgba(0,0,0,.12);
   z-index: 1;
+  transition: .5s cubic-bezier(0.35, 0, 0.25, 1);
 }
 
 .small {
